fix: wrong response align in footer

--- a/static/css/G.css
+++ b/static/css/G.css
@@ -330,6 +330,7 @@ a.prev:hover, a.next:hover {
 
     #footer-nav {
         margin-top: 10px;
+        text-align: left;
     }
 
     #footer-nav a {
